--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "check": "cross-env NODE_ENV=production nodemon --harmony index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "pm2 deploy production",
-    "sequelize-automate:dev": "cross-env NODE_ENV=development sequelize-automate -c sequelize-automate.config.js"
+    "sequelize-automate:dev": "cross-env NODE_ENV=development sequelize-automate -c sequelize-automate.config.js",
+    "push:dev": "npm run build && cross-env NODE_ENV=development gulp",
+    "push:test": "npm run build && cross-env NODE_ENV=staging gulp",
+    "push:stable": "npm run build && cross-env NODE_ENV=stable gulp",
+    "nginx:dev": "cross-env NODE_ENV=development gulp nginx",
+    "nginx:test": "cross-env NODE_ENV=staging gulp nginx",
+    "nginx:stable": "cross-env NODE_ENV=stable gulp nginx",
+    "cat-nginx:dev": "cross-env NODE_ENV=development gulp cat",
+    "cat-nginx:test": "cross-env NODE_ENV=staging gulp cat",
+    "cat-nginx:stable": "cross-env NODE_ENV=stable gulp cat"
   },
   "repository": {
     "type": "git",
@@ -57,6 +66,8 @@
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
+    "gulp": "^4.0.2",
+    "gulp-ssh": "^0.7.0",
     "nodemon": "^1.18.6"
   }
 }
